[package]
name = "twitch_tts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
regex = "1.7.1"
tokio = {version = "1.26.0", features = ["rt-multi-thread"]}
tts = "0.25.0"
twitch-irc = "5.0.0"

[features]
dumb_terminal = ["colored/no-color"]
